--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pixi.js": "^5.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "socket.io": "^2.3.0"
   },
