--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "express": "^4.17.1",
+    "matter-js": "^0.14.2",
     "pixi.js": "^5.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
