--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "matter-js": "^0.14.2",
     "pixi.js": "^5.2.1",
