--- a/src/config.json
+++ b/src/config.json
@@ -4,6 +4,11 @@
     },
     "game": {
         "updatesPerSecond": 10,
+        "teams": {
+            "numberOfTeams": 2,
+            "team1Color": "blue",
+            "team2Color": "red"
+        },
         "player": {
             "nameMaxCharCount": 15,
             "body": {
@@ -16,8 +21,15 @@
             }
         },
         "terrain": {
+            "blockSize": 20,
             "width": 400,
-            "height": 200
+            "maxHeight": 200,
+            "minHeight": 130,
+            "generation": {
+                "minCalculateDistance": 5,
+                "maxCalculateDistance": 15,
+                "maxHeightChange": 10
+            }
         }
     }
 }
