--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon ./server.js localhost 3001"
+    "server": "nodemon ./server.js"
   },
   "proxy": "http://localhost:3001/",
   "eslintConfig": {
