Add user spawning logic

--- a/src/config.json
+++ b/src/config.json
@@ -11,6 +11,8 @@
             "team2Color": "red"
         },
         "player": {
+            "spawnAwayFromEnd": 10,
+            "spawnAwayFromMid": 10,
             "nameMaxCharCount": 15,
             "body": {
                 "width": 10,
